removendo arquivos desnecessários

--- a/src/app/consultar/components/consultar/consultar.component.css
+++ b/src/app/consultar/components/consultar/consultar.component.css
@@ -15,3 +15,9 @@
     opacity: 1;
     color: #FFF;
 }
+
+@media (max-width: 768px) {
+  .espaco-filtro-tabela {
+    margin-bottom: 15px !important;
+  }
+}
