--- a/src/app/consultar/components/consultar/consultar.component.html
+++ b/src/app/consultar/components/consultar/consultar.component.html
@@ -5,7 +5,7 @@
     </h4>
 </div>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 col-sm-12 espaco-filtro-tabela">
         <div class="card">
             <div class="card-header">
                 <b>{{ titulo }}</b>
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-8" *ngIf="ponto">
+    <div class="col-md-8 col-sm-12" *ngIf="ponto">
         <div class="card">
             <div class="card-header">
                 <b>{{ ponto.codigo }} - {{ ponto.nome }}</b>
